Tue Apr  1 20:01:45 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - common/state.c: make the command list sorted (so that commands
   will be listed in alphabetic order by upscmd)

Mon Mar 31 19:53:47 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - clients/upsc: be a good little client that cleans up after itself

Mon Mar 31 11:31:49 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 * clients/upsclient.[ch]:
   - add read buffer (so that we can read in larger chunks, instead
     of character by character)
   - the context buffer is now statically allocated (since we always
     need it)
   - code cleanup

Fri Mar 28 20:20:08 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

- drivers/dstate.[ch]: use doubly linked list for connections to the
  driver (to speedup adding/removing connections) and code cleanup

Fri Mar 28 20:01:24 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - server/sstate.c,upsd.c: don't terminate connection on EAGAIN,
   EINTR or if no data was received (these are not really errors)

Thu Mar 27 21:36:54 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/dstate.c: fix memory leak (minor)

Thu Mar 27 20:24:54 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/netxml-ups: default to 5 seconds if pollinterval is not
   specified (to prevent overloading older NMCs by default)

Tue Mar 25 20:09:12 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - clients/upsclient.c: partially revert r1394 (breaks the LIST
   command, that depends on reading replies line-by-line)

Tue Mar 25 19:08:11 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 * server/upsd:
   - improved performance for servers handling many clients by using
     a doubly (instead of a singly) linked list for the clients (so
     that we don't have to traverse the whole list if we want to add
     or remove a client)
   - let the parser deal with fragmented reads from the server and
     the clients (don't duplicate this in the server), just feed it
     with the raw data